GNOME Bugzilla – Bug 685172
log errno on statvfs failure
Last modified: 2013-12-08 23:58:56 UTC
On line 196 of fs_usage.c from linux[1], in case of a statvfs error (-1 returned), glibtop logs an error message that statvfs failed, but it should also specify errno to give the user a clue on what's wrong and how to fix the issue (if possible). [1]http://git.gnome.org/browse/libgtop/tree/sysdeps/linux/fsusage.c#n196
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.